# serde-flexible

./: .gitignore  Cargo.toml  LICENSE  README.md
serde_flexible/: Cargo.toml
serde_flexible/src/: deserialize.rs  lib.rs
serde_flexible/src/deserialize/: as_bool.rs  as_bool_opt.rs  as_f64.rs  as_f64_opt.rs  as_i64.rs  as_i64_opt.rs  as_string.rs  as_string_opt.rs  as_u64.rs  as_u64_opt.rs  unexpected.rs  wrappers.rs
src/: deserialize.rs
src/deserialize/: as_bool.rs  as_bool_opt.rs  as_f64.rs  as_f64_opt.rs  as_i64.rs  as_i64_opt.rs  as_string.rs  as_string_opt.rs  as_u64.rs  as_u64_opt.rs
tests/: Cargo.toml
tests/tests/: serde_deserialize_with.rs
