[package]
name = "serde-flexible"
version = "0.1.0"
authors = [
    "Anton Panfilov <anton@panfilov.biz>"
]
description = "Custom deserialization for fields that can be specified as multiple types."
documentation = "https://github.com/anton-panfilov/serde-flexible"
repository = "https://github.com/anton-panfilov/serde-flexible"
readme = "README.md"
keywords = [
    "serde",
    "flxablilty",
    "deserialization",
    "multiple-type"
]
categories = ["encoding"]
license = "MIT"
edition = "2021"
exclude = [".github/", ".gitignore", "benches/", "examples/"]

[dependencies]
serde = "^1"

[dev-dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.132"

[features]
default = []
derive = ["serde/derive"]
