[workspace]
resolver = "2"
members = [
    "serde_flexible",
    "tests",
]

[patch.crates-io]
serde-flexible = { path = "serde_flexible" }

[workspace.dependencies]
proc-macro2 = { version = "1.0.74", default-features = false }
quote = { version = "1.0.35", default-features = false }
syn = { version = "2.0.81", default-features = false }