[package]
name = "serde-flexible-tests"
version = "0.1.0"
authors = [
    "Anton Panfilov <anton@panfilov.biz>"
]
edition = "2021"
publish = false

[dependencies]
serde-flexible = { path = "../serde_flexible" }

[dev-dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.132"

[features]
default = []
derive = ["serde/derive"]
